@@ -1,3 +1,7 @@
+2009-09-10  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.XmlEditor/XmlFormatter.cs: Track API changes.
+
 2009-09-09  Mike Krüger  <mkrueger@novell.com>
 
 	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs:
